[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/highway-sky.png" type="Texture" id=1]
[ext_resource path="res://Assets/PixelSplitter-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu Inicial.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 3
outline_color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_size = 3
outline_color = Color( 0.101961, 0.101961, 0.101961, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 70
outline_size = 3
outline_color = Color( 0.14902, 0.14902, 0.14902, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 64
outline_size = 3
outline_color = Color( 0.113725, 0.113725, 0.113725, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 100
outline_size = 3
outline_color = Color( 0.141176, 0.141176, 0.141176, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="Highway-sky" type="Sprite" parent="."]
position = Vector2( 959, 591 )
scale = Vector2( 5, 5 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 366.0
margin_top = 134.0
margin_right = 1547.0
margin_bottom = 251.0
custom_fonts/font = SubResource( 1 )
text = "Achados e Perdidos"

[node name="Iniciar" type="Button" parent="."]
margin_left = 802.0
margin_top = 521.0
margin_right = 1115.0
margin_bottom = 603.0
custom_fonts/font = SubResource( 2 )
text = "Iniciar"
flat = true

[node name="Sair" type="Button" parent="."]
margin_left = 860.0
margin_top = 700.0
margin_right = 1052.0
margin_bottom = 782.0
custom_fonts/font = SubResource( 3 )
text = "Sair"
flat = true

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 149.0
margin_top = 285.0
margin_right = 1840.0
margin_bottom = 537.0
custom_fonts/font = SubResource( 4 )
text = "               um aventureiro durante uma
 de suas viagens perdeu alguns objetos
                      ajude ele a encontrar"

[node name="Continuar" type="Button" parent="."]
visible = false
margin_left = 756.0
margin_top = 926.0
margin_right = 1166.0
margin_bottom = 1008.0
custom_fonts/font = SubResource( 5 )
text = "Continuar"
flat = true

[node name="Label3" type="Label" parent="."]
visible = false
margin_left = 136.0
margin_top = 250.0
margin_right = 1784.0
margin_bottom = 487.0
custom_fonts/font = SubResource( 6 )
text = "utilize as setas do teclado
          para se movimentar"

[node name="Continuar2" type="Button" parent="."]
visible = false
margin_left = 756.0
margin_top = 926.0
margin_right = 1166.0
margin_bottom = 1008.0
custom_fonts/font = SubResource( 5 )
text = "Continuar"
flat = true

[connection signal="pressed" from="Iniciar" to="." method="_on_Iniciar_pressed"]
[connection signal="pressed" from="Sair" to="." method="_on_Sair_pressed"]
[connection signal="pressed" from="Continuar" to="." method="_on_Continuar_pressed"]
[connection signal="pressed" from="Continuar2" to="." method="_on_Continuar2_pressed"]
